# porkchop

./: .gitignore  .gitmodules  README.md  build_deps.sh  fix-cmake-build-error-boost_find_component.patch  input.json  meson.build  run.sh
include/: porkchop.hpp
scripts/: plot.py
src/: main.cpp  porkchop.cpp
